Fix drop down profile menu hidden behind right col messages

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -111,7 +111,7 @@
 		top:160;
 		right:0;
 		position: fixed;
-		z-index: 3000;
+		z-index: 1000;
 
 
 		margin:0;
